Labels were not visible, color styling issue corrected

--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -12,6 +12,7 @@
     border-radius: 5px;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: black;
     h2 {
         color:black;
     }
